Fixed label visibility issue

--- a/css/section-6.css
+++ b/css/section-6.css
@@ -48,3 +48,7 @@
     transform: translateX(-100vw);
   }
 }
+
+label {
+  display:none;
+}
